--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,10 +4,9 @@
 
 .navbar {
   display: inline-block;
-  background-color: #f8fafc;
-  border-radius: 48px;
+  background-color: #FFFFFF;
+  border-radius: 30px;
   border-color: #d4d4d8;
-  border-style: solid;
   border-width: 1px;
 }
 
