--- a/src/components/SignupWidget/SignupWidget.css
+++ b/src/components/SignupWidget/SignupWidget.css
@@ -5,13 +5,11 @@
 .signup-widget {
   display: flex;
   flex-direction: column;
-  padding: 24px;
-  border: 1px solid #e0e0e0;
-  border-radius: 6px;
+  padding: 20px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 420px;
+  margin: 0px 20px;
   row-gap: 12px;
+  border-radius: 20px;
 }
 
 .signup-widget h2 {
@@ -40,10 +38,9 @@
 
 .signup-widget button {
   padding: 2px 24px;
-  width: 42px;
   text-align: center;
   border-radius: 6px;
-  background-color: #4caf50;
+  background-color: #272729;
   color: white;
   line-height: 16px;
   font-size: 14px;
