--- a/src/components/ProfileHeader/ProfileHeader.css
+++ b/src/components/ProfileHeader/ProfileHeader.css
@@ -1,28 +1,10 @@
 .profile-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
+
+  margin: 20px;
   border-radius: 10px;
-  max-width: 600px;
-  width: 100%;
   box-sizing: border-box;
 }
-.profile-icon {
-  width: 100px; /* Adjust the size as needed */
-  height: 100px; /* Adjust the size as needed */
-  border-radius: 50%; /* Makes the image round */
-  margin-right: auto; /* this makes it to be in the left but I wanna put it more down*/
-  padding: 10px;
-}
-.profile-image {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-  object-fit: cover;
-  border: 3px solid #ffffff;
-}
+
 
 h1 {
   font-size: 2.5rem;
