--- a/src/components/SkillsWidget/SkillsWidget.css
+++ b/src/components/SkillsWidget/SkillsWidget.css
@@ -6,11 +6,9 @@
   display: flex;
   flex-direction: column;
   padding: 24px;
-  border: 1px solid #e0e0e0;
-  border-radius: 6px;
-  width: 100%;
-  max-width: 420px;
+  border-radius: 20px;
   row-gap: 12px;
+  margin: 0px 20px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
