--- a/src/components/WorkWidget/WorkWidget.css
+++ b/src/components/WorkWidget/WorkWidget.css
@@ -3,27 +3,59 @@
 */
 
 .work-widget {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  border-radius: 20px;
+  row-gap: 12px;
+  margin: 0px 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .work-widget h2 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
 }
 
 .work-widget p {
+  font-size: 16px;
+  color: #777;
 }
 
 .work-widget ul {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
 }
 
 .work-item {
+  display: flex;
+  flex-direction: row;
+  column-gap: 8px;
+  align-items: center;
 }
 
 .work-item img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 .work-item h3 {
+  flex-shrink: 1;
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
 }
 
 .work-item-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 4px;
 }
 
 .work-item-content h3 {
@@ -32,10 +64,21 @@
 }
 
 .work-item-content-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .work-item-content-details p {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  color: #999;
+  text-transform: uppercase;
 }
 
 .work-item-content-details span {
+  font-size: 14px;
+  color: #999;
 }
