--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -29,12 +29,16 @@
   color: #333;
   line-height: 1.5;
   margin: 0px 0px 16px 0px;
+
+
 }
 
 .article-card a {
   font-size: 16px;
   font-weight: bold;
-  color: #007bff;
+  color: #14B8A6;
+  display: flex;
+  column-gap: 9px;
 }
 
 .article-card a:hover {
