--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,20 @@
 /* TODO:
   Fill out this component according to the README.
 */
-
+/* display: flex; justify-content: space-between; */
 .footer {
-  display: flex;
+  text-align: center;
   flex-direction: row;
-  justify-content: space-between;
   padding: 40px 5px;
   border-top: 1px solid #e9ecef;
 }
 
 .footer ul {
+  desiplay:block;
   display: flex;
+  justify-content: center;
   flex-direction: row;
-  align-items: center;
+  text-align: center;
   column-gap: 24px;
 }
 
