--- a/src/components/SkillsWidget/SkillsWidget.css
+++ b/src/components/SkillsWidget/SkillsWidget.css
@@ -13,6 +13,9 @@
 }
 
 .skills-widget h2 {
+  display:flex;
+  align-items: center;
+  column-gap: 10px;
   margin: 0;
   font-size: 24px;
   font-weight: bold;
