--- a/src/components/WorkWidget/WorkWidget.css
+++ b/src/components/WorkWidget/WorkWidget.css
@@ -3,7 +3,7 @@
 */
 
 .work-widget {
-  display: flex;
+
   flex-direction: column;
   padding: 24px;
   border-radius: 20px;
@@ -13,6 +13,9 @@
 }
 
 .work-widget h2 {
+  display:flex;
+  align-items: center;
+  column-gap: 10px;
   margin: 0;
   font-size: 24px;
   font-weight: bold;
@@ -26,6 +29,7 @@
 
 .work-widget ul {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   row-gap: 24px;
 }
