--- a/src/components/AboutHeader/AboutHeader.css
+++ b/src/components/AboutHeader/AboutHeader.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: auto;
+  padding: 20px;
   border-radius: 10px;
   max-width: 600px;
   width: 100%;
