--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -44,8 +44,8 @@
   background-color: #f1f1f1;
 }
 
-.dropdown-item.danger:hover {
-  background-color: #f1bcb9;
+.dark .dropdown-item:hover {
+  background-color: black;
 }
 
 .dropdown-divider {
